modify the download tip for apps

--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -72,7 +72,7 @@
         <article class="markdown-body">
           <h2>北大未名Lite</h2>
 		  <p>访问北大未名BBS网站(http://bbs.pku.edu.cn)的iOS客户端 （Lite版本只能潜水）。</p>
-		  <p>可在App Store下载：</p>
+		  <p>可在App Store免费下载：</p>
 		  <p><a href="http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?mt=8">http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?mt=8</a></p>
 		  <h2>北大未名</h2>
 		  <p>访问北大未名BBS网站(http://bbs.pku.edu.cn)的iOS客户端。具备看帖、发帖、回帖、站内信、收藏等各种功能。界面简洁精美。</p>
