--- a/apps/chisha/index.html
+++ b/apps/chisha/index.html
@@ -76,7 +76,7 @@
 		  <p>iOS版本可以在App Store免费下载:</p>
 		  <p><a href="https://itunes.apple.com/cn/app/chi-sha/id594761510?mt=8">https://itunes.apple.com/cn/app/chi-sha/id594761510?mt=8</a></p>
           
-          <p>安卓版可以点击下面的链接下载.apk文件：</p>
+          <p>安卓版可以点击下面的链接去百度网盘下载.apk文件：</p>
 		  <p><a href="http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647">http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647</a></p>
           
           <h2>联系开发者</h2>
