--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -79,14 +79,14 @@
 			<p>By the way, you may also use this client（你也可以用下面这个客户端）: <a href="http://itunes.apple.com/cn/app/pku-ipgw-client/id509145354?l=en&mt=8">IPGWClient</a>.</p>
 
 		  <h2>IPGateway-Mac（在苹果电脑上使用）</h2>
-		  <p>Click the following link to download the .zip file, extract it, then you will get IPGateway.app. Better put it in the /Applications folder).（点击下面的链接下载.zip文件，直接运行解压得到的IPGateway.app即可。最好把它放在/Applications文件夹。）</p>
+		  <p>Click the following link to download the .zip file, extract it, then you will get IPGateway.app. Better put it in the /Applications folder).（点击下面的链接去百度网盘下载.zip文件，直接运行解压得到的IPGateway.app即可。最好把它放在/Applications文件夹。）</p>
 		  <p><a href="http://pan.baidu.com/s/1ntG89dv">http://pan.baidu.com/s/1ntG89dv</a></p>
 		  
 		  <h2>IPGateway-Android（安卓版）</h2>
 		  <p>Click the following link to install it from the Google Play.（点击下面的链接从Google Play应用商店安装。）</p>
           <p><a href="https://play.google.com/store/apps/details?id=pku.shengbin.ipgateway">https://play.google.com/store/apps/details?id=pku.shengbin.ipgateway</a></p>
           <p>Or click the following link to download the .apk file, and install it on your Android devices.
-          （或者点击下面的链接下载.apk文件，并在安卓设备上安装。）</p>
+          （或者点击下面的链接去百度网盘下载.apk文件，并在安卓设备上安装。）</p>
 		  <p><a href="http://pan.baidu.com/s/1gjtNz">http://pan.baidu.com/s/1gjtNz</a></p>
 		  
 		  <h2>Contact（联系开发者）</h2>
