update the links for apk files to latest version

--- a/apps/chisha/index.html
+++ b/apps/chisha/index.html
@@ -77,7 +77,7 @@
 		  <p><a href="https://itunes.apple.com/cn/app/chi-sha/id594761510?mt=8">https://itunes.apple.com/cn/app/chi-sha/id594761510?mt=8</a></p>
           
           <p>安卓版可以点击下面的链接去百度网盘下载.apk文件：</p>
-		  <p><a href="http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647">http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647</a></p>
+		  <p><a href="http://pan.baidu.com/s/1o69LaX0">http://pan.baidu.com/s/1o69LaX0</a></p>
           
           <h2>联系开发者</h2>
 		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:hello@shengbin.me">hello@shengbin.me</a></p>
