--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -87,7 +87,7 @@
           <p><a href="https://play.google.com/store/apps/details?id=pku.shengbin.ipgateway">https://play.google.com/store/apps/details?id=pku.shengbin.ipgateway</a></p>
           <p>Or click the following link to download the .apk file, and install it on your Android devices.
           （或者点击下面的链接去百度网盘下载.apk文件，并在安卓设备上安装。）</p>
-		  <p><a href="http://pan.baidu.com/s/1gjtNz">http://pan.baidu.com/s/1gjtNz</a></p>
+		  <p><a href="http://pan.baidu.com/s/1kT3L1R5">http://pan.baidu.com/s/1kT3L1R5</a></p>
 		  
 		  <h2>Contact（联系开发者）</h2>
 		  <p>Have questions or suggestions? Feel free to send me emails（如有任何问题或建议，可发电子邮件至）: <a href="mailto:hello@shengbin.me">hello@shengbin.me</a></p>
