--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -83,6 +83,8 @@
 		  <p><a href="http://pan.baidu.com/s/1ntG89dv">http://pan.baidu.com/s/1ntG89dv</a></p>
 		  
 		  <h2>IPGateway-Android（安卓版）</h2>
+		  <p>The app in Google Play can not be updated for some <a href="http://blog.shengbin.me/posts/keep-your-key-safe/">reason</a>, so please download the latest version .apk file directly.
+		  （应用商店的版本<a href="http://blog.shengbin.me/posts/keep-your-key-safe/">因故</a>已经不能更新，最新版请从百度网盘下载。）</p>
 		  <p>Click the following link to install it from the Google Play.（点击下面的链接从Google Play应用商店安装。）</p>
           <p><a href="https://play.google.com/store/apps/details?id=pku.shengbin.ipgateway">https://play.google.com/store/apps/details?id=pku.shengbin.ipgateway</a></p>
           <p>Or click the following link to download the .apk file, and install it on your Android devices.
