--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -78,7 +78,7 @@
 		  <p>访问北大未名BBS网站(http://bbs.pku.edu.cn)的iOS客户端。具备看帖、发帖、回帖、站内信、收藏等各种功能。界面简洁精美。</p>
 		  <p>即将发布。有意参与内测者可发邮件给开发者。</p>
 		  <h2>联系开发者</h2>
-		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:hello@shengbin.me">hello@shengbin.me</a></p>
+		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:meng@shengbin.me">meng@shengbin.me</a></p>
 		  
 		  <hr>
 		  <h1>Donate</h1>
