--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <h2>Contact</h2>
             <p>You may already know how to reach me. If not, here are some possible ways(sorry you can't have my phone number):</p>
             <ul>
-            <li>Email：<a href="mailto:meng@shengbin.me">meng@shengbin.me</a></li>
+            <li>Email: <a href="mailto:meng@shengbin.me">meng@shengbin.me</a></li>
             <li>QQ: 815237522</li>
             </ul>
         </td>
@@ -159,7 +159,7 @@
             <h2>联系我</h2>
             <p>如果访问了上面链接的内容，你应该已经能够联系到我了。这里再明确给出两种时效性更好的联系方式（手机号就不公开了吧）：</p>
             <ul>
-            <li>Email：<a href="mailto:meng@shengbin.me">meng@shengbin.me</a></li>
+            <li>Email: <a href="mailto:meng@shengbin.me">meng@shengbin.me</a></li>
             <li>QQ: 815237522</li>
             </ul>
         </td>
