add footer for index page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="Shengbin Meng, shengbinmeng, 孟胜彬">
 <meta name="description" content="Shengbin Meng's Home Page, providing links to other information about him. 孟胜彬的起始页，提供其在网络上各种信息的链接。">
 <link rel="shortcut icon" href="/shengbin.png">
-<link rel="stylesheet" type="text/css" href="/shengbin.css">
+<link rel="stylesheet" type="text/css" href="./shengbin.css">
 <!-- for Google Analytics -->
 <script type="text/javascript">
 
@@ -184,5 +184,8 @@ var duoshuoQuery = {short_name:"shengbin"};
 
 </div>
 
+<div class="footer">
+&copy; Shengbin Meng with help from <a href="http://github.com" target="_blank" title="GitHub.">GitHub</a> and <a href="http://www.google.com/search?q=Shengbin+Meng" target="_blank" title="The definitive search engine.">Google</a>.
+</div>
 </body>
 </html>
