add footer for all pages

--- a/apps/index.html
+++ b/apps/index.html
@@ -67,7 +67,8 @@
 
 </div>
 
-<footer>
-</footer>
+<div class="footer">
+&copy; Shengbin Meng with help from <a href="http://github.com" target="_blank" title="GitHub.">GitHub</a> and <a href="http://www.google.com/search?q=Shengbin+Meng" target="_blank" title="The definitive search engine.">Google</a>.
+</div>
 </body>
 </html>
