--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -95,5 +95,9 @@
       </div>
     </footer>
   </div>
+
+<div class="footer">
+&copy; Shengbin Meng with help from <a href="http://github.com" target="_blank" title="GitHub.">GitHub</a> and <a href="http://www.google.com/search?q=Shengbin+Meng" target="_blank" title="The definitive search engine.">Google</a>.
+</div>  
 </body>
 </html>
