--- a/enjoy/movies.html
+++ b/enjoy/movies.html
@@ -64,7 +64,8 @@
 </div>
 </div>
 
-<footer>
-</footer>
+<div class="footer">
+&copy; Shengbin Meng with help from <a href="http://github.com" target="_blank" title="GitHub.">GitHub</a> and <a href="http://www.google.com/search?q=Shengbin+Meng" target="_blank" title="The definitive search engine.">Google</a>.
+</div>
 </body>
 </html>
