--- a/apps/index.html
+++ b/apps/index.html
@@ -63,7 +63,7 @@
 </ul>
 <h2>More:</h2>
 <p>Some web apps powered by PHP are hosted on the Sina App Engine, which can be accessed by the following link.<p>
-<p><a href="http://shengbin.sinaapp.com">shengbin.sinaapp.com</p>
+<p><a href="http://shengbin.sinaapp.com">shengbin.sinaapp.com</a></p>
 
 </div>
 
