--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<meta name="p:domain_verify" content="7b9d21666f9782d6f1cd3745fbf92101"/>
 <meta charset="utf-8">
 <title>Shengbin Meng - 孟胜彬</title>
 <base target="_blank">
