--- a/donate/index.html
+++ b/donate/index.html
@@ -67,7 +67,7 @@
 <form name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_xclick">
 <input type="hidden" name="business" value="shengbinmeng@gmail.com">
-<input type="hidden" name="item_name" value="Donate for valuable app and blog">
+<input type="hidden" name="item_name" value="Donation for valuable app and/or blog of Shengbin Meng">
 <input type="hidden" name="charset" value="utf-8">
 <input type="hidden" name="currency_code" value="USD">
 <!-- <input type="hidden" name="amount" value="5.00"> -->
