--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -97,7 +97,7 @@
   </div>
 
 <div class="footer">
-&copy; Shengbin Meng with help from <a href="http://github.com" target="_blank" title="GitHub.">GitHub</a> and <a href="http://www.google.com/search?q=Shengbin+Meng" target="_blank" title="The definitive search engine.">Google</a>.
+&copy; Shengbin Meng with help from <a href="http://github.com" target="_blank" title="The world's largest code host.">GitHub</a> and <a href="http://www.google.com" target="_blank" title="The definitive search engine.">Google</a>.
 </div>  
 </body>
 </html>
