edit donation page

--- a/donate/index.html
+++ b/donate/index.html
@@ -58,7 +58,7 @@
 <h1>捐赠/Donate</h1>
 <p>我创建和维护几个开源<a href="http://www.shengbin.me/apps" target="_blank">应用</a>，并保持更新个人<a href="http://blog.shengbin.me" target="_blank">博客</a>。如果你觉得我的代码或文字对你有用，欢迎向我捐赠。</p>
 
-<h2>用手机支付宝钱包扫描下面的二维码进行付款（数量随意）：</h2>
+<h2>用手机支付宝钱包扫描下面的二维码进行付款（数量随意，记得备注付款说明）：</h2>
 <img src="./alipay.png" width="512px" height="512px" style="margin:auto;display:block;">
 
 <br />
