remove dead link for baidu space

--- a/index.html
+++ b/index.html
@@ -100,13 +100,11 @@
             <h2>Essays</h2>
             <p>When I was young(real young, persuing my bachelor's degree in <a href="http://www.tsinghua.edu.cn">THU</a>), 
             I wrote about my days and thoughts. They are here:</p>
-            <p><a href="http://hi.baidu.com/shengbinmeng">Shengbin's Baidu Space</a>; or here:</p>
-            <p><a href="http://blog.sina.com.cn/msb91">Shengbin's Sina Blog</a>.</p>
+            <p><a href="http://blog.sina.com.cn/msb91">Shengbin's Sina Blog</a></p>
         </td>
         <td>
             <h2>随笔</h2>
-            <p>在<a href="http://www.tsinghua.edu.cn">清华园</a>的时候，我用文字记录青春岁月中的经历或想法。青春越来越远，文字也越来越少，但写过的东西都存在下面两个地方:</p>
-            <p><a href="http://hi.baidu.com/shengbinmeng">我的百度空间</a></p>
+            <p>在<a href="http://www.tsinghua.edu.cn">清华园</a>的时候，我用文字记录青春岁月中的经历或想法。青春越来越远，文字也越来越少，但写过的东西都存在下面这个地方:</p>
             <p><a href="http://blog.sina.com.cn/msb91">我的新浪博客</a></p>
         </td>
 	</tr>
@@ -149,7 +147,7 @@
 	<tr>
         <td>
             <h2>Contact</h2>
-            <p>You may already know how to reach me. If not, here are some possible ways(sorry you can't have my phone number):</p>
+            <p>You may already know how to reach me. If not, here are some possible ways:</p>
             <ul>
             <li>Email: <a href="mailto:meng@shengbin.me">meng@shengbin.me</a></li>
             <li>QQ: 815237522</li>
@@ -157,7 +155,7 @@
         </td>
         <td>
             <h2>联系我</h2>
-            <p>如果访问了上面链接的内容，你应该已经能够联系到我了。这里再明确给出两种时效性更好的联系方式（手机号就不公开了吧）：</p>
+            <p>如果访问了上面链接的内容，你应该已经能够联系到我了。这里再给出两种时效性更好的联系方式：</p>
             <ul>
             <li>Email: <a href="mailto:meng@shengbin.me">meng@shengbin.me</a></li>
             <li>QQ: 815237522</li>
