change Facebook profile URL

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p><a href="http://www.douban.com/people/msb91/">Douban</a></p>
             <p><a href="http://user.qzone.qq.com/815237522">QQzone</a></p>
             <p><a href="http://twitter.com/shengbinmeng">Twitter</a></p>
-            <p><a href="https://www.facebook.com/shengbin.meng">Facebook</a>(login required)</p>
+            <p><a href="https://www.facebook.com/profile.php?id=100003701085957">Facebook</a>(login required)</p>
             <p><a href="https://plus.google.com/114401094924234562179">Google+</a></p>
         </td>
         <td>
@@ -140,7 +140,7 @@
             <p><a href="http://www.douban.com/people/msb91/">msb91@豆瓣</a></p>
             <p><a href="http://user.qzone.qq.com/815237522">ed@QQ空间</a></p>
             <p><a href="http://twitter.com/shengbinmeng">shengbinmeng@Twitter</a></p>
-            <p><a href="https://www.facebook.com/shengbin.meng">Shengbin Meng@Facebook</a>（需要登录）</p>
+            <p><a href="https://www.facebook.com/profile.php?id=100003701085957">Shengbin Meng@Facebook</a>（需要登录）</p>
             <p><a href="https://plus.google.com/114401094924234562179">Shengbin Meng@Google+</a></p>
         </td>
 	</tr>
