--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <td>
             <h2>简介</h2>
             <p>相逢何必曾相识。</p>
-            <p>该页面可以让你了解我。这里汇集了我在网络上的各种信息（当然只包括我乐意公开的内容喽：）。</p>
+            <p>该页面可以让你了解我。这里汇集了我在网络上的各种公开信息。</p>
         </td>
 	</tr>
 	<tr>
