update the link to ICST of PKU

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<tr>
         <td>
             <h2>Apps/Coding</h2>
-            <p>I began to use <a href="http://sae.sina.com.cn/">SAE</a> even in its alpha version, since I joined the <a href="http://college.sina.com">Sina Web College</a>. I learned PHP there, and began to create Web apps/sites. I began developing iOS and Android apps as part of my work in <a href="http://www.icst.pku.edu.cn/vip/en/page/student/shengbin.html">ICST of PKU</a>. I also write other codes, in different languages, for various reasons.
+            <p>I began to use <a href="http://sae.sina.com.cn/">SAE</a> even in its alpha version, since I joined the <a href="http://college.sina.com">Sina Web College</a>. I learned PHP there, and began to create Web apps/sites. I began developing iOS and Android apps as part of my work in <a href="http://www.icst.pku.edu.cn/vip/index.html">ICST of PKU</a>. I also write other codes, in different languages, for various reasons.
             Next are some results of my coding:</p>
             <p><a href="./apps">Shengbin's Small Apps<a/></p>
             <p><a href="https://bitbucket.org/shengbinmeng">Shengbin's Bitbucket</a></p>
@@ -85,7 +85,7 @@
         <td>
             <h2>应用/代码</h2>
             <p>我曾在<a href="http://college.sina.com">新浪网络学院</a>学习PHP，并作为第一批试用者接触了<a href="http://sae.sina.com.cn/">新浪SAE</a>。
-            因此我可以写一些简单的网页应用，或是搭建网站。进入<a href="http://www.icst.pku.edu.cn/vip/en/page/student/shengbin.html">北京大学计算机科学技术研究所</a>之后，
+            因此我可以写一些简单的网页应用，或是搭建网站。进入<a href="http://www.icst.pku.edu.cn/vip/index.html">北京大学计算机科学技术研究所</a>之后，
             我接触了iOS和Android开发，并编写和发布了几个移动应用。此外，我也因为各种原因写其他代码。从以下的链接可以看到我写过的一些应用或开源代码:</p>
             <p><a href="./apps">我的小应用<a/></p>
             <p><a href="https://bitbucket.org/shengbinmeng">我的Bitbucket代码库</a></p>
