use readable url for Google+

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <p><a href="http://user.qzone.qq.com/815237522">QQzone</a></p>
             <p><a href="http://twitter.com/shengbinmeng">Twitter</a></p>
             <p><a href="https://www.facebook.com/profile.php?id=100003701085957">Facebook</a>(login required)</p>
-            <p><a href="https://plus.google.com/114401094924234562179">Google+</a></p>
+            <p><a href="https://plus.google.com/+ShengbinMeng">Google+</a></p>
         </td>
         <td>
             <h2>社交网站</h2>
@@ -138,7 +138,7 @@
             <p><a href="http://user.qzone.qq.com/815237522">ed@QQ空间</a></p>
             <p><a href="http://twitter.com/shengbinmeng">shengbinmeng@Twitter</a></p>
             <p><a href="https://www.facebook.com/profile.php?id=100003701085957">Shengbin Meng@Facebook</a>（需要登录）</p>
-            <p><a href="https://plus.google.com/114401094924234562179">Shengbin Meng@Google+</a></p>
+            <p><a href="https://plus.google.com/+ShengbinMeng">Shengbin Meng@Google+</a></p>
         </td>
 	</tr>
 	<tr>
