change the footer

--- a/donate/index.html
+++ b/donate/index.html
@@ -75,7 +75,7 @@
 </div>
 
 <div class="footer">
-&copy; Shengbin Meng with help from <a href="http://github.com" target="_blank" title="The world's largest code host.">GitHub</a> and <a href="http://www.google.com" target="_blank" title="The definitive search engine.">Google</a>.
+<small>&copy;<script language="javascript">document.write(new Date().getFullYear());</script> Shengbin Meng</small>
 </div>
 </body>
 </html>
