link to github for source code of the apps

--- a/apps/chisha/index.html
+++ b/apps/chisha/index.html
@@ -60,7 +60,7 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://bitbucket.org/shengbinmeng" class="code" target="_blank">Source Code（源码）</a>
+          <a href="https://github.com/shengbinmeng" class="code" target="_blank">Source Code（源码）</a>
 		  <a href="http://www.shengbin.me/donate" class="download-button" target="_blank"><span>Donate（捐赠）</span></a>
         </div>
 		
