--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             You can find me in the following places: </p>
             <p><a href="http://weibo.com/msb91">Weibo</a>(login required)</p>
             <p><a href="http://www.renren.com/shengbinmeng">Renren</a>(login required)</p>
-            <p><a href="http://www.douban.com/people/msb91/">Douban</a></p>
+            <p><a href="http://movie.douban.com/people/msb91/">Douban</a></p>
             <p><a href="http://user.qzone.qq.com/815237522">QQzone</a></p>
             <p><a href="http://twitter.com/shengbinmeng">Twitter</a></p>
             <p><a href="https://www.facebook.com/shengbin.me">Facebook</a>(login required)</p>
@@ -134,7 +134,7 @@
             <p>其实我不怎么使用公共的社交网站。但我喜欢尝试和接受新的东西，也愿意分享。因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
             <p><a href="http://weibo.com/msb91">梦圣@新浪微博</a>（需要登录）</p>
             <p><a href="http://www.renren.com/shengbinmeng">孟胜彬@人人网</a>（需要登录）</p>
-            <p><a href="http://www.douban.com/people/msb91/">msb91@豆瓣</a></p>
+            <p><a href="http://movie.douban.com/people/msb91/">msb91@豆瓣</a></p>
             <p><a href="http://user.qzone.qq.com/815237522">ed@QQ空间</a></p>
             <p><a href="http://twitter.com/shengbinmeng">shengbinmeng@Twitter</a></p>
             <p><a href="https://www.facebook.com/shengbin.me">Shengbin Meng@Facebook</a>（需要登录）</p>
