add books I read

--- a/enjoy/reading.html
+++ b/enjoy/reading.html
@@ -54,10 +54,13 @@
 
 <div class="main">
 <h1>Reading</h1>
-<p class="tagline">I share some of what I read via Weibo. Check it out!</p>
-<br />
-<br />
-<div id="reading">
+<p class="tagline">Here are some books I read. I also share some posts I read via Weibo.</p>
+<br><br>
+<div>
+<script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?selection=latest&amp;picsize=medium&amp;hideself=on&amp;show=collection&amp;n=16&amp;hidelogo=on&amp;cat=book&amp;columns=8"></script>
+</div>
+<br>
+<div>
 <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=0&ptype=0&speed=300&skin=0&isTitle=0&noborder=1&isWeibo=1&isFans=0&uid=1655326502&verifier=a4b56a6a&dpc=1"></iframe>
 </div>
 </div>
