--- a/enjoy/movies.html
+++ b/enjoy/movies.html
@@ -56,7 +56,7 @@
 <h1>Movies</h1>
 <p class="tagline">I keep watching movies. Recently the following ones.</p>
 <br><br>
-<div id="movies">
+<div>
 <script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?selection=latest&amp;picsize=medium&amp;hideself=on&amp;show=collection&amp;n=16&amp;hidelogo=on&amp;cat=movie&amp;columns=8"></script>
 </div>
 </div>
