--- a/enjoy/movies.html
+++ b/enjoy/movies.html
@@ -59,6 +59,7 @@
 <div>
 <script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?selection=latest&amp;picsize=medium&amp;hideself=on&amp;show=collection&amp;n=16&amp;hidelogo=on&amp;cat=movie&amp;columns=8"></script>
 </div>
+<p class="tagline"><a href="http://movie.douban.com/people/msb91/"><small>more...</small></a></p>
 </div>
 
 <div class="footer">
