--- a/enjoy/reading.html
+++ b/enjoy/reading.html
@@ -59,6 +59,7 @@
 <div>
 <script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?selection=latest&amp;picsize=medium&amp;hideself=on&amp;show=collection&amp;n=16&amp;hidelogo=on&amp;cat=book&amp;columns=8"></script>
 </div>
+<p class="tagline"><a href="http://book.douban.com/people/msb91/"><small>more...</small></a></p>
 <br>
 <div>
 <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=0&ptype=0&speed=300&skin=0&isTitle=0&noborder=1&isWeibo=1&isFans=0&uid=1655326502&verifier=a4b56a6a&dpc=1"></iframe>
