use the actual lyrics

--- a/enjoy/music.html
+++ b/enjoy/music.html
@@ -54,7 +54,7 @@
 
 <div class="main">
 <h1>Music</h1>
-<p class="tagline">When I was young I listened to the radio, waiting for my favorite song.</p>
+<p class="tagline">When I was young I'd listen to the radio, waiting for my favorite songs.</p>
 <br>
 <div id="radio">
 <iframe width="420px" height="185px" src="http://douban.fm/partner/baidu/doubanradio" frameborder="no"></iframe>
