--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -72,11 +72,13 @@
 		  
 		  <h2>IPGateway-iOS（在iPhone/iPad上使用）</h2>
 		  <p>IPGateway for iPhone and iPad is available in the App Store（iOS版本可以在App Store免费下载）:</p>
-			<p><a href="https://itunes.apple.com/cn/app/ipgateway/id493761518?mt=8">https://itunes.apple.com/cn/app/ipgateway/id493761518?mt=8</a></p>
-			<p>By the way, you may also use this client（你也可以用下面这个客户端）: <a href="http://itunes.apple.com/cn/app/pku-ipgw-client/id509145354?l=en&mt=8">IPGWClient</a>.</p>
+		  <p><a href="https://itunes.apple.com/cn/app/ipgateway/id493761518?mt=8">https://itunes.apple.com/cn/app/ipgateway/id493761518?mt=8</a></p>
+		  <p>By the way, you may also use this client（你也可以用下面这个客户端）: <a href="http://itunes.apple.com/cn/app/pku-ipgw-client/id509145354?l=en&mt=8">IPGWClient</a>.</p>
 
 		  <h2>IPGateway-Mac（在苹果电脑上使用）</h2>
-		  <p>Click the following link to download the .zip file, extract it, then you will get IPGateway.app. Better put it in the /Applications folder).（点击下面的链接去百度网盘下载.zip文件，直接运行解压得到的IPGateway.app即可。最好把它放在/Applications文件夹。）</p>
+		  <p>IPGateway for Mac is available in the Mac App Store（Mac版可以在Mac App Store免费下载）:</p>
+		  <p><a href="https://itunes.apple.com/cn/app/ipgateway/id1004353231?ls=1&mt=12">https://itunes.apple.com/cn/app/ipgateway/id1004353231?ls=1&mt=12</a></p>
+		  <p>You can also click the following link to download the .zip file, extract it, then you will get IPGateway.app to run. Better put it in the /Applications folder).（点击下面的链接去百度网盘下载.zip文件，直接运行解压得到的IPGateway.app即可。最好把它放在/Applications文件夹。）</p>
 		  <p><a href="http://pan.baidu.com/s/1ntG89dv">http://pan.baidu.com/s/1ntG89dv</a></p>
 		  
 		  <h2>IPGateway-Android（安卓版）</h2>
