--- a/wedding/index.html
+++ b/wedding/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Shengbin+Cuicui</title>
+<title>孟胜彬＋王翠翠</title>
 <link rel="shortcut icon" href="/shengbin.png">
 <link rel="stylesheet" type="text/css" href="./assets/style.css" >
 </head>
@@ -27,9 +27,9 @@
 			<hr>
 			<h1>孟胜彬<br>与<br>王翠翠</h1>
 			<hr>
-			<h2>10月6日</h2>
+			<h2>10月6日，2015年</h2>
 			<hr>
-			<h2>2015年</h2>
+			<h2>河南·郑州</h2>
 		</div>
 	</div>
 	
