--- a/wedding/photos.html
+++ b/wedding/photos.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Shengbin+Cuicui</title>
+<title>孟胜彬＋王翠翠</title>
 <link rel="shortcut icon" href="/shengbin.png">
 <link rel="stylesheet" type="text/css" href="./assets/style.css" >
 </head>
