--- a/wedding/story.html
+++ b/wedding/story.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Shengbin+Cuicui</title>
+<title>孟胜彬＋王翠翠</title>
 <link rel="shortcut icon" href="/shengbin.png">
 <link rel="stylesheet" type="text/css" href="./assets/style.css" >
 </head>
@@ -25,7 +25,7 @@
 		<div id="content">
 			<img src="./assets/bird.png">
 			<hr>
-			<p>我们在北京认识。</p>
+			<p>想听我们的故事？来参加婚礼吧！一切尽在现场。</p>
 		</div>
 	</div>
 	
