--- a/wedding/invite.html
+++ b/wedding/invite.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Shengbin+Cuicui</title>
+<title>孟胜彬＋王翠翠</title>
 <link rel="shortcut icon" href="/shengbin.png">
 <link rel="stylesheet" type="text/css" href="./assets/style.css" >
 </head>
@@ -25,7 +25,14 @@
 		<div id="content">
 			<img src="./assets/bird.png">
 			<hr>
-			<p>欢迎参加我们的婚礼。</p>
+			<p>我们定于公元2015年10月6日在河南郑州举办婚礼。欢迎你的到来。</p>
+			<p>新郎孟胜彬，承受着这个年纪不该有的帅气和才华。新娘王翠翠，相信上面这句话，并在两人之间培育了真正的爱情。
+			婚礼，只是个仪式；更重要的，是二人的故事。</p>
+			<p>10月6日是国庆假期，趁这个机会，让我们相聚中原。河南的老乡们，可以回家一趟；省外的朋友们，
+			不妨将假期旅行安排在河南。洛阳龙门石窟、开封府、少林寺、轩辕黄帝故里，都距郑州不远。</p>
+			<p>婚礼举办地位于郑州市航空港区，毗邻新郑国际机场，亦可从郑州东站公交直达。这里由富士康带动，正经历从农村到城市的迅速更替，是
+			感受“旧貌换新颜”的绝佳地点。</p>
+			<p>来吧！</p>
 		</div>
 	</div>
 	
