--- a/wedding/index.html
+++ b/wedding/index.html
@@ -22,8 +22,8 @@
 				<li><a href="./photos.html">照片</a></li>
 			</ul>
 		</div>
+		<div id="top"><img src="./assets/bird.png"></div>
 		<div id="content">
-			<img src="./assets/bird.png">
 			<hr>
 			<h1>孟胜彬<br>与<br>王翠翠</h1>
 			<hr>
@@ -35,6 +35,8 @@
 	
 	<div id="right"></div>
 </div>
-
+<div class="footer">
+<small>&copy;<script language="javascript">document.write(new Date().getFullYear());</script> Shengbin Meng</small>
+</div>
 </body>
 </html>
