--- a/wedding/photos.html
+++ b/wedding/photos.html
@@ -22,8 +22,8 @@
 				<li><a href="./photos.html">照片</a></li>
 			</ul>
 		</div>
+		<div id="top"><img src="./assets/bird.png"></div>
 		<div id="content">
-			<img src="./assets/bird.png">
 			<hr>
 			<p>参见：<a href="http://xiangce.baidu.com/shengbinmeng">http://xiangce.baidu.com/shengbinmeng</a>。</p>
 		</div>
@@ -31,6 +31,8 @@
 	
 	<div id="right"></div>
 </div>
-
+<div class="footer">
+<small>&copy;<script language="javascript">document.write(new Date().getFullYear());</script> Shengbin Meng</small>
+</div>
 </body>
 </html>
