--- a/wedding/story.html
+++ b/wedding/story.html
@@ -22,15 +22,21 @@
 				<li><a href="./photos.html">照片</a></li>
 			</ul>
 		</div>
+		<div id="top"><img src="./assets/bird.png"></div>
 		<div id="content">
-			<img src="./assets/bird.png">
 			<hr>
-			<p>想听我们的故事？来参加婚礼吧！一切尽在现场。</p>
+			<p>孟王子只得解释道：“这名字是我爸起的。他说由于他姓孟，而我妈姓王，生个儿子就叫孟王子吧。”</p>
+			<p>……</p>
+			<p><i><small>新郎和新娘是怎么认识的？他们有哪些惊心动魄、与众不同的故事？来参加婚礼吧！下面的视频只是秀恩爱，现场的讲述才更精彩。</small></i></p>
+			<iframe height=360 width=520 src="http://player.youku.com/embed/XNjcyNzQ2MzU2" frameborder=0 allowfullscreen></iframe>
+			<p class="footer"><a href="http://v.youku.com/v_show/id_XOTA5MTUyMjIw.html?from=y1.7-2"><small>更多...<small></a></p>
 		</div>
 	</div>
 	
 	<div id="right"></div>
 </div>
-
+<div class="footer">
+<small>&copy;<script language="javascript">document.write(new Date().getFullYear());</script> Shengbin Meng</small>
+</div>
 </body>
 </html>
