--- a/wedding/story.html
+++ b/wedding/story.html
@@ -25,11 +25,10 @@
 		<div id="top"><img src="./assets/bird.png"></div>
 		<div id="content">
 			<hr>
-			<p>孟王子只得解释道：“这名字是我爸起的。他说由于他姓孟，而我妈姓王，生个儿子就叫孟王子吧。”</p>
-			<p>……</p>
+			<p>孟王子只得解释道：“这名字是我爸起的。他说由于他姓孟，而我妈姓王，生个儿子就叫孟王子吧。”<br>……</p>
 			<p><i><small>新郎和新娘是怎么认识的？他们有哪些惊心动魄、与众不同的故事？来参加婚礼吧！下面的视频只是秀恩爱，现场的讲述才更精彩。</small></i></p>
 			<iframe height=360 width=520 src="http://player.youku.com/embed/XNjcyNzQ2MzU2" frameborder=0 allowfullscreen></iframe>
-			<p class="footer"><a href="http://v.youku.com/v_show/id_XOTA5MTUyMjIw.html?from=y1.7-2"><small>更多...<small></a></p>
+			<p class="footer"><a href="http://v.youku.com/v_show/id_XOTA5MTUyMjIw.html?from=y1.7-2"><small>更多...</small></a></p>
 		</div>
 	</div>
 	
