--- a/wedding/invite.html
+++ b/wedding/invite.html
@@ -25,14 +25,13 @@
 		<div id="top"><img src="./assets/bird.png"></div>
 		<div id="content">
 			<hr>
-			<p>我们定于公元2015年10月6日在河南郑州举办婚礼，诚邀您参加。</p>
+			<p>孟胜彬与王翠翠结婚典礼定于公元2015年10月4日（农历八月廿二）在河南郑州举行，诚邀您参加。</p>
 			<p>新郎孟胜彬，承受着这个年纪不该有的帅气和才华。新娘王翠翠，相信上面这句话，并在两人之间培育了真正的爱情。
 			婚礼，只是个仪式；更重要的，是二人的故事。</p>
-			<p>10月6日是国庆假期，趁这个机会，来中原一聚吧。河南的老乡，算是回家了；外省的朋友，不妨将假期旅行安排在河南。
+			<p>10月4日是国庆假期，趁这个机会，欢迎来中原一聚。河南的老乡，可以借此回一趟家；外省的朋友，不妨顺便游览河南。
 			洛阳龙门石窟、开封府、嵩山少林寺、轩辕黄帝故里，都距郑州不远。</p>
-			<p>婚礼举办地点位于郑州市航空港区，毗邻新郑国际机场，亦可从郑州东站公交直达。
-			这里由富士康带动，经历了从农村到城市的迅速发展，如今已是“旧貌换新颜”。</p>
-			<p>期待你的到来！若有意，请提前联系我以安排食宿。</p>
+			<p>婚礼举办地点位于郑州市航空港区（原中牟县张庄镇），毗邻新郑国际机场，亦可从郑州东站公交直达。</p>
+			<p>期待你的到来！若有意，请以各种途径告知我。</p>
 		</div>
 	</div>
 	
