--- a/wedding/invite.html
+++ b/wedding/invite.html
@@ -30,7 +30,7 @@
 			婚礼，只是个仪式；更重要的，是二人的故事。</p>
 			<p>10月4日是国庆假期，趁这个机会，欢迎来中原一聚。河南的老乡，可以借此回一趟家；外省的朋友，不妨顺便游览河南。
 			洛阳龙门石窟、开封府、嵩山少林寺、轩辕黄帝故里，都距郑州不远。</p>
-			<p>婚礼举办地点位于郑州市航空港区（原中牟县张庄镇），毗邻新郑国际机场，亦可从郑州东站公交直达。</p>
+			<p>婚礼举办地点位于郑州市航空港区，毗邻新郑国际机场，亦可从郑州东站公交直达。</p>
 			<p>期待你的到来！若有意，请以各种途径告知我。</p>
 		</div>
 	</div>
