Temp baidu verification.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="baidu-site-verification" content="K4JeXpLvwg" />
 <title>Shengbin Meng - 孟胜彬</title>
 <base target="_blank">
 <meta name="author" content="Shengbin Meng">
