--- a/wedding/index.html
+++ b/wedding/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>孟胜彬+王翠翠</title>
-	<meta name="keywords" content="婚礼 孟胜彬 王翠翠">
-	<meta name="description" content="胜彬和翠翠的婚礼网站">
+  <meta name="keywords" content="婚礼 孟胜彬 王翠翠">
+  <meta name="description" content="胜彬和翠翠的婚礼网站">
   <link rel="stylesheet" href="combo.css">
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
@@ -13,8 +13,8 @@
   <script type="text/javascript" src="./slimbox/jquery.min.js"></script>
   <script type="text/javascript" src="./slimbox/slimbox2.js"></script>
   <script type="text/javascript" src="site.js"></script>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 </head>
 <body>
   <div id="main">
