Add wedding scene video.

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -89,7 +89,7 @@
 
 <div class="center">
 	<p>孟王子只得解释道：“这名字是我爸起的。他说由于他姓孟，而我妈姓王，孟和王的儿子就叫孟王子吧。我妈竟然也觉得这名字好，于是我就叫这个了。”<br />……</p>
-	<p><i><small>孟王子他爸妈有哪些经历？下面的视频只是秀恩爱，现场的讲述才更精彩。</small></i></p> 
+	<p><i><small>孟王子他爸妈有哪些经历？下面的视频只是秀恩爱，现场的讲述才更精彩。</small></i></p>
 	<div class="icontain"><iframe src="http://player.youku.com/embed/XNjcyNzQ2MzU2" allowfullscreen=""></iframe></div>
 	<br /><br />
 	<p><a href="http://v.youku.com/v_show/id_XOTA5MTUyMjIw.html?from=y1.7-2"><small>再来一个...</small></a></p>
@@ -165,7 +165,12 @@
           <h2>现场</h2>
 
 <div class="center">
-<p>即将上线，敬请期待。</p>
+	<p>中西混搭，雅俗共赏。隆重朴实，文明喜庆。</p><br />
+	<div class="icontain"><iframe src="http://player.youku.com/embed/XMTM2MzU0NTQ2NA==" allowfullscreen=""></iframe></div>
+	<br /><br />
+	<p>另附三个影集：<a href="http://v.youku.com/v_show/id_XMTM2MjY3Nzk2NA==.html" target="_blank">一路走来</a>、
+	<a href="http://v.youku.com/v_show/id_XMTM2MjY3ODE3Ng==.html" target="_blank">婚照</a>、
+	<a href="http://v.youku.com/v_show/id_XMTM2MjY3ODI3Mg==.html" target="_blank">婚礼</a>。</p>
 </div>
 
 
