--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p><a href="http://movie.douban.com/people/msb91/">Douban</a></p>
             <p><a href="http://user.qzone.qq.com/815237522">QQzone</a></p>
             <p><a href="http://twitter.com/shengbinmeng">Twitter</a></p>
-            <p><a href="https://www.facebook.com/shengbin.me">Facebook</a>(login required)</p>
+            <p><a href="https://www.facebook.com/shengbinmeng">Facebook</a>(login required)</p>
             <p><a href="https://plus.google.com/+ShengbinMeng">Google+</a></p>
         </td>
         <td>
@@ -137,7 +137,7 @@
             <p><a href="http://movie.douban.com/people/msb91/">msb91@豆瓣</a></p>
             <p><a href="http://user.qzone.qq.com/815237522">ed@QQ空间</a></p>
             <p><a href="http://twitter.com/shengbinmeng">shengbinmeng@Twitter</a></p>
-            <p><a href="https://www.facebook.com/shengbin.me">Shengbin Meng@Facebook</a>（需要登录）</p>
+            <p><a href="https://www.facebook.com/shengbinmeng">Shengbin Meng@Facebook</a>（需要登录）</p>
             <p><a href="https://plus.google.com/+ShengbinMeng">Shengbin Meng@Google+</a></p>
         </td>
 	</tr>
