Add attributes for ds-thread

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </div>
 
 <!-- Duoshuo Comment BEGIN -->
-<div class="ds-thread"></div>
+<div class="ds-thread" data-thread-key="shengbin-home" data-title="Shengbin Meng - 孟胜彬" data-url="http://www.shengbin.me/"></div>
 <script type="text/javascript">
 var duoshuoQuery = {short_name:"shengbin"};
 (function() {
@@ -175,7 +175,7 @@ var duoshuoQuery = {short_name:"shengbin"};
     || document.getElementsByTagName('body')[0]).appendChild(ds);
 })();
 </script>
-<!-- Duoshuo Comment END --> 
+<!-- Duoshuo Comment END -->
 
 </div>
 
