Edit the home page

--- a/index.html
+++ b/index.html
@@ -65,77 +65,73 @@
         <td>
             <h2>About</h2>
             <p>Hello World!</p>
-            <p>This is a landing page, from where you can get information about me on the web.</p>
+            <p>This is my home page, from where you can get information about me on the web.</p>
         </td>
         <td>
             <h2>简介</h2>
             <p>相逢何必曾相识。</p>
-            <p>该页面可以让你了解我。这里汇集了我在网络上的各种公开信息。</p>
+            <p>这是我的个人主页。这里汇集了我在网络上的各种公开信息，可以让你了解我。</p>
         </td>
 	</tr>
 	<tr>
         <td>
             <h2>Apps/Coding</h2>
-            <p>I began to use <a href="http://sae.sina.com.cn/">SAE</a> even in its alpha version, since I joined the <a href="http://college.sina.com">Sina Web College</a>. I learned PHP there, and began to create Web apps/sites. I began developing iOS and Android apps as part of my work in <a href="http://www.icst.pku.edu.cn/vip/index.html">ICST of PKU</a>. I also write other codes, in different languages, for various reasons.
-            Next are some results of my coding:</p>
+            <p>I began to use <a href="http://www.sinacloud.com/sae.html">SAE</a> (the first PaaS in China) even in its alpha version, when I took training in <a href="http://college.sina.com">Sina Web College</a>. I learned PHP there, and began to create Web apps/sites. I developed iOS and Android apps as part of my work in <a href="http://www.icst.pku.edu.cn/vip/index.html">ICST of PKU</a>. I also write other codes, in different languages, for various reasons. Next are some results of my coding:</p>
             <p><a href="./apps">Shengbin's Small Apps<a/></p>
             <p><a href="https://bitbucket.org/shengbinmeng">Shengbin's Bitbucket</a></p>
             <p><a href="https://github.com/shengbinmeng">Shengbin's GitHub</a></p>
         </td>
         <td>
             <h2>应用/代码</h2>
-            <p>我曾在<a href="http://college.sina.com">新浪网络学院</a>学习PHP，并作为第一批试用者接触了<a href="http://sae.sina.com.cn/">新浪SAE</a>。
-            因此我可以写一些简单的网页应用，或是搭建网站。进入<a href="http://www.icst.pku.edu.cn/vip/index.html">北京大学计算机科学技术研究所</a>之后，
-            我接触了iOS和Android开发，并编写和发布了几个移动应用。此外，我也因为各种原因写其他代码。从以下的链接可以看到我写过的一些应用或开源代码:</p>
+            <p>我曾在首届<a href="http://college.sina.com">新浪网络学院</a>的培训中学习PHP，并作为第一批试用者接触了<a href="http://www.sinacloud.com/sae.html">新浪SAE</a>。
+            由此我开始写一些简单的网页应用，或是搭建网站。进入<a href="http://www.icst.pku.edu.cn/vip/index.html">北京大学计算机科学技术研究所</a>之后，
+            我学习了iOS和Android开发，并编写和发布了几个移动应用。此外，我也因为各种原因写其他代码。从以下的链接可以看到我写过的一些应用或开源代码:</p>
             <p><a href="./apps">我的小应用<a/></p>
             <p><a href="https://bitbucket.org/shengbinmeng">我的Bitbucket代码库</a></p>
-            <p><a href="https://github.com/shengbinmeng">我的GitHub代码库</a></p>    
+            <p><a href="https://github.com/shengbinmeng">我的GitHub代码库</a></p>
         </td>	
     </tr>
 	<tr>
         <td>
-            <h2>Essays</h2>
-            <p>When I was young(real young, persuing my bachelor's degree in <a href="http://www.tsinghua.edu.cn">THU</a>), 
-            I wrote about my days and thoughts. They are here:</p>
-            <p><a href="http://blog.sina.com.cn/msb91">Shengbin's Sina Blog</a></p>
+            <h2>Blog</h2>
+            <p>When I was young (persuing my bachelor's degree in <a href="http://www.tsinghua.edu.cn">THU</a>), 
+            I wrote about my days and thoughts. Currently, I continue the habit of writing and maintain a blog. You are welcome to read what I write on <a href="http://blog.shengbin.me">my blog</a>.</p>
         </td>
         <td>
-            <h2>随笔</h2>
-            <p>在<a href="http://www.tsinghua.edu.cn">清华园</a>的时候，我用文字记录青春岁月中的经历或想法。青春越来越远，文字也越来越少，但写过的东西都存在下面这个地方:</p>
-            <p><a href="http://blog.sina.com.cn/msb91">我的新浪博客</a></p>
+            <h2>博客</h2>
+            <p>在<a href="http://www.tsinghua.edu.cn">清华园</a>的时候，我用文字记录青春岁月中的经历或想法。青春远去了，但写过的东西，连同写作的习惯都存留了下来。
+            如果你想了解我在学术、技术和生活等方面的情况，欢迎阅读<a href="http://blog.shengbin.me">我的博客</a>。</p>
         </td>
 	</tr>
 	<tr>
         <td>
             <h2>Photos</h2>
-            <p>I put some of my photos in <a href="http://xiangce.baidu.com/shengbinmeng">Shengbin's Baidu Album</a>. 
-            So now you know what I look like.</p>
+            <p>I put some of my photos in <a href="http://xiangce.baidu.com/shengbinmeng">Baidu Album</a>. 
+            So now you know what I look like and what I have seen.</p>
         </td>
         <td>
             <h2>照片</h2>
-            <p>我把自己的部分照片放在了<a href="http://xiangce.baidu.com/shengbinmeng">我的百度相册</a>上面。你可以去那儿看看我的各种二照和我看过的东西。</p>
+            <p>我把自己的一些照片放在了<a href="http://xiangce.baidu.com/shengbinmeng">我的百度相册</a>里。你可以去那儿看看我的各种二照和我看过的东西。</p>
         </td>
 	</tr>
 	<tr>
         <td>
             <h2>Social Network</h2>
-            <p>I am not really a socialized person. However, that doesn't stop me trying all kinds of social network. 
+            <p>I spend only a little time in social networks. However, that doesn't stop me trying all kinds of them. 
             You can find me in the following places: </p>
-            <p><a href="http://weibo.com/msb91">Weibo</a>(login required)</p>
-            <p><a href="http://www.renren.com/shengbinmeng">Renren</a>(login required)</p>
+            <p><a href="http://weibo.com/msb91">Weibo</a> (login required)</p>
+            <p><a href="http://www.renren.com/shengbinmeng">Renren</a> (login required)</p>
             <p><a href="http://movie.douban.com/people/msb91/">Douban</a></p>
-            <p><a href="http://user.qzone.qq.com/815237522">QQzone</a></p>
             <p><a href="http://twitter.com/shengbinmeng">Twitter</a></p>
-            <p><a href="https://www.facebook.com/shengbinmeng">Facebook</a>(login required)</p>
+            <p><a href="https://www.facebook.com/shengbinmeng">Facebook</a> (login required)</p>
             <p><a href="https://plus.google.com/+ShengbinMeng">Google+</a></p>
         </td>
         <td>
             <h2>社交网站</h2>
-            <p>其实我不怎么使用公共的社交网站。但我喜欢尝试和接受新的东西，也愿意分享。因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
+            <p>其实我不怎么使用社交网站。但我喜欢尝试和接受新的东西，也愿意分享。因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
             <p><a href="http://weibo.com/msb91">梦圣@新浪微博</a>（需要登录）</p>
             <p><a href="http://www.renren.com/shengbinmeng">孟胜彬@人人网</a>（需要登录）</p>
             <p><a href="http://movie.douban.com/people/msb91/">msb91@豆瓣</a></p>
-            <p><a href="http://user.qzone.qq.com/815237522">ed@QQ空间</a></p>
             <p><a href="http://twitter.com/shengbinmeng">shengbinmeng@Twitter</a></p>
             <p><a href="https://www.facebook.com/shengbinmeng">Shengbin Meng@Facebook</a>（需要登录）</p>
             <p><a href="https://plus.google.com/+ShengbinMeng">Shengbin Meng@Google+</a></p>
