Edit the home page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<tr>
         <td>
             <h2>Apps/Coding</h2>
-            <p>I began to use <a href="http://www.sinacloud.com/sae.html">SAE</a> (the first PaaS in China) even in its alpha version, when I took training in <a href="http://college.sina.com">Sina Web College</a>. I learned PHP there, and began to create Web apps/sites. I developed iOS and Android apps as part of my work in <a href="http://www.icst.pku.edu.cn/vip/index.html">ICST of PKU</a>. I also write other codes, in different languages, for various reasons. Next are some results of my coding:</p>
+            <p>I used <a href="http://www.sinacloud.com/sae.html">SAE</a> even in its alpha version, when I took training in <a href="http://college.sina.com">Sina Web College</a>. I learned PHP there, and began to create Web pages/sites. I developed iOS and Android apps as part of my work in <a href="http://www.icst.pku.edu.cn/vip/index.html">ICST of PKU</a>. I have been writing codes in different languages, for various reasons. Next are some results of my coding:</p>
             <p><a href="./apps">Shengbin's Small Apps<a/></p>
             <p><a href="https://bitbucket.org/shengbinmeng">Shengbin's Bitbucket</a></p>
             <p><a href="https://github.com/shengbinmeng">Shengbin's GitHub</a></p>
@@ -95,7 +95,7 @@
         <td>
             <h2>Blog</h2>
             <p>When I was young (persuing my bachelor's degree in <a href="http://www.tsinghua.edu.cn">THU</a>), 
-            I wrote about my days and thoughts. Currently, I continue the habit of writing and maintain a blog. You are welcome to read what I write on <a href="http://blog.shengbin.me">my blog</a>.</p>
+            I wrote about my days and thoughts. Currently, I still keep the habit of writing. You are welcome to read what I write on <a href="http://blog.shengbin.me">my blog</a>.</p>
         </td>
         <td>
             <h2>博客</h2>
