--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<tr>
         <td>
             <h2>Blog</h2>
-            <p>When I was young (persuing my bachelor's degree in <a href="http://www.tsinghua.edu.cn">THU</a>), 
+            <p>When I was young (pursuing my bachelor's degree in <a href="http://www.tsinghua.edu.cn">THU</a>), 
             I wrote about my days and thoughts. Currently, I still keep the habit of writing. You are welcome to read what I write on <a href="http://blog.shengbin.me">my blog</a>.</p>
         </td>
         <td>
