--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	<tr>
         <td>
             <h2>Social Network</h2>
-            <p>I spend only a little time in social networks. However, that doesn't stop me trying all kinds of them. 
+            <p>I spend only a little time on social networks. However, that doesn't stop me trying all kinds of them. 
             You can find me in the following places: </p>
             <p><a href="http://weibo.com/msb91">Weibo</a> (login required)</p>
             <p><a href="http://www.renren.com/shengbinmeng">Renren</a> (login required)</p>
