--- a/enjoy/reading.html
+++ b/enjoy/reading.html
@@ -54,7 +54,7 @@
 
 <div class="main">
 <h1>Reading</h1>
-<p class="tagline">Here are some books I read. I also share some posts I read via Weibo.</p>
+<p class="tagline">Here are books I read lately. I also share some posts I read via Weibo.</p>
 <br><br>
 <div>
 <script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?selection=latest&amp;picsize=medium&amp;hideself=on&amp;show=collection&amp;n=16&amp;hidelogo=on&amp;cat=book&amp;columns=8"></script>
