--- a/enjoy/music.html
+++ b/enjoy/music.html
@@ -6,5 +6,5 @@ title: "Music - 音乐"
 <p class="tagline">When I was young I'd listen to the radio, waiting for my favorite songs.</p>
 <br>
 <div id="radio">
-<iframe width="420px" height="185px" src="http://douban.fm/partner/baidu/doubanradio" frameborder="no"></iframe>
+<iframe width="1040px" height="600px" src="http://douban.fm/" frameborder="no"></iframe>
 </div>
