--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@ description: "Shengbin Meng's Home Page, providing links to other information ab
             <p><a href="https://github.com/shengbinmeng">我的GitHub代码库</a></p>
         </td>	
     </tr>
+    <tr>
+        <td>
+            <h2>Research/Papers</h2>
+            <p>I did academic research on video information processing and received the Ph.D. degree in computer science from Peking University. 
+            See the <a href="https://scholar.google.com/citations?user=6xtZajwAAAAJ">Google Scholar page</a> for my journal and conference papers.</p>
+        </td>
+        <td>
+            <h2>研究/论文</h2>
+            <p>我在北京大学读书期间进行了数字视频信息处理方面的学术研究工作，并获得了计算机专业的理学博士学位。我以第一作者所发表的国际期刊与会议论文及其引用情况可参见<a href="https://scholar.google.com/citations?user=6xtZajwAAAAJ">我的谷歌学术页面</a>。</p>
+        </td>
+	</tr>
 	<tr>
         <td>
             <h2>Blog</h2>
-            <p>When I was young (pursuing my bachelor's degree in <a href="http://www.tsinghua.edu.cn">THU</a>), 
+            <p>When I was young (pursuing my Bachelor of Engineering degree in <a href="http://www.tsinghua.edu.cn">Tsinghua University</a>),
             I wrote about my days and thoughts. Currently, I still keep the habit of writing. You are welcome to read what I write on <a href="http://blog.shengbin.me">my blog</a>.</p>
         </td>
         <td>
             <h2>博客</h2>
             <p>在<a href="http://www.tsinghua.edu.cn">清华园</a>的时候，我用文字记录青春岁月中的经历或想法。青春远去了，但写过的东西，连同写作的习惯都存留了下来。
             如果你想了解我在学术、技术和生活等方面的情况，欢迎阅读<a href="http://blog.shengbin.me">我的博客</a>。</p>
-        </td>
-	</tr>
-	<tr>
-        <td>
-            <h2>Photos</h2>
-            <p>I put some of my photos in <a href="http://xiangce.baidu.com/shengbinmeng">Baidu Album</a>. 
-            So now you know what I look like and what I have seen.</p>
-        </td>
-        <td>
-            <h2>照片</h2>
-            <p>我把自己的一些照片放在了<a href="http://xiangce.baidu.com/shengbinmeng">我的百度相册</a>里。你可以去那儿看看我的各种二照和我看过的东西。</p>
         </td>
 	</tr>
 	<tr>
