Change menu link style

--- a/apps/index.html
+++ b/apps/index.html
@@ -5,10 +5,10 @@ title: "Shengbin's Small Apps"
 <h1>Shengbin's Small Apps</h1>
 <h2>Click to go:</h2>
 <ul>
-	<li><a href="ipgateway">IPGateway</a></li>
-	<li><a href="unibbs">UniBBS</a></li>
-	<li><a href="chisha">ChiSha</a></li>
-	<li><a href="baidu-it-for-you">Baidu It For You</a></li>
+	<li><a href="ipgateway/">IPGateway</a></li>
+	<li><a href="unibbs/">UniBBS</a></li>
+	<li><a href="chisha/">ChiSha</a></li>
+	<li><a href="baidu-it-for-you/">Baidu It For You</a></li>
 </ul>
 <h2>More:</h2>
 <p>Some web apps powered by PHP are hosted on the Sina App Engine, which can be accessed by the following link.<p>
