--- a/enjoy/index.html
+++ b/enjoy/index.html
@@ -5,7 +5,7 @@ title: "Enjoy - 乐事"
 <h1>Enjoy This With Me</h1>
 <h2>Click to go:</h2>
 <ul>
-<li><a href="./reading.html">Reading</a></li>
-<li><a href="./music.html">Music</a></li>
-<li><a href="./movies.html">Movies</a></li>
+<li><a href="./reading">Reading</a></li>
+<li><a href="./music">Music</a></li>
+<li><a href="./movies">Movies</a></li>
 </ul>
