--- a/apps/baidu-it-for-you/index.html
+++ b/apps/baidu-it-for-you/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>让我帮你百度一下</title>
-<meta content="用于教导那些不知道自己使用搜索引擎解决简单问题的家伙" name="description">
-<meta content="百度、搜索、教学、使用方法、帮忙" name="keywords">
+<link rel="shortcut icon" href="/shengbin.png">
 <link rel="stylesheet" type="text/css" href="./styles/main.css">
 <script src="./scripts/jquery.min.js" type="text/javascript"></script>
 <script src="./scripts/bundle.js" type="text/javascript"></script>
@@ -33,7 +32,7 @@
 		<span rel="localize[post_logo]">百度一下</span>
 	  </div>
 	  <form class="search">
-		<input class="text" size="55" title="百度搜索" type="text" value="">
+		<input class="text" size="80" title="百度搜索" type="text" value="">
 		<br>
 		<br>
 		<span class="button_wrapper">
@@ -60,8 +59,8 @@
 	</center>
 
 	<div id="about_this">
-	  <p>By: Shengbin Meng</p>
-	  <p>The logo belongs to Baidu. And I am here: <a href="http://www.shengbin.me">www.shengbin.me</a></p>
+	  <p><small>Inspired by, and some code copied from, <a href="http://lmgtfy.com/">lmgtfy.com</a>. The logo belongs to Baidu. | <a href="" onclick="alert('这个页面用于教导那些不知道自己使用搜索引擎解决简单问题（例如美国的首都是哪里）的家伙。');">About</a></small></p>
+	  <p><small>&copy;<script language="javascript">document.write(new Date().getFullYear());</script> Shengbin Meng</small></p>
 	</div>
 	<img id="fake_mouse" src="./assets/mouse-arrow.png" style="display: none">
 
