Simplify the 'Baidu it' app

--- a/apps/baidu-it-for-you/index.html
+++ b/apps/baidu-it-for-you/index.html
@@ -37,12 +37,7 @@
 		<br>
 		<span class="button_wrapper">
 		  <div class="inner">
-			<input id="search" rel="localize[search_button]" type="button" value="百度搜索">
-		  </div>
-		</span>
-		<span class="button_wrapper">
-		  <div class="inner">
-			<input id="lucky" rel="localize[lucky_button]" type="button" value="试试谷歌">
+			<input id="search" rel="localize[search_button]" type="button" value="搜索">
 		  </div>
 		</span>
 	  </form>
@@ -52,9 +47,6 @@
 	  <div id="link">
 		<input class="link copyable" readonly="readonly" type="text">
 		<div id="link_message" style="display: none;"></div>
-		<div id="link_buttons">
-		  <a class="link_button" href="./#" id="go" rel="localize[link.go]">预览效果</a>
-		</div>
 	  </div>
 	</center>
 
