--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ description: "Shengbin Meng's Home Page, providing links to other information ab
         </td>
         <td>
             <h2>研究/论文</h2>
-            <p>我在北京大学读书期间进行了数字视频信息处理方面的学术研究工作，并获得了计算机专业的理学博士学位。我以第一作者所发表的国际期刊与会议论文及其引用情况可参见<a href="https://scholar.google.com/citations?user=6xtZajwAAAAJ">我的谷歌学术页面</a>。</p>
+            <p>我在北京大学读书期间进行了数字视频信息处理方面的学术研究工作，并获得了计算机专业的理学博士学位。我作为主要贡献者所发表的国际期刊与会议论文及其引用情况可参见<a href="https://scholar.google.com/citations?user=6xtZajwAAAAJ">我的谷歌学术页面</a>。</p>
         </td>
 	</tr>
 	<tr>
