--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@ description: "Shengbin Meng's Home Page, providing links to other information ab
     </tr>
     <tr>
         <td>
-            <h2>Research/Papers</h2>
+            <h2>Papers/Research</h2>
             <p>I did academic research on video information processing and received the Ph.D. degree in computer science from Peking University. 
             See the <a href="https://scholar.google.com/citations?user=6xtZajwAAAAJ">Google Scholar page</a> for my journal and conference papers.</p>
         </td>
         <td>
-            <h2>研究/论文</h2>
+            <h2>论文/研究</h2>
             <p>我在北京大学读书期间进行了数字视频信息处理方面的学术研究工作，并获得了计算机专业的理学博士学位。我作为主要贡献者所发表的国际期刊与会议论文及其引用情况可参见<a href="https://scholar.google.com/citations?user=6xtZajwAAAAJ">我的谷歌学术页面</a>。</p>
         </td>
 	</tr>
