--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -27,7 +27,7 @@ description: "Shengbin's App - UniBBS"
 		  <p>可在App Store免费下载：</p>
 		  <p><a href="https://itunes.apple.com/cn/app/bei-da-wei-ming/id931393093">https://itunes.apple.com/cn/app/bei-da-wei-ming/id931393093</a></p>
 		  <h2>联系开发者</h2>
-		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:meng@shengbin.me">meng@shengbin.me</a></p>
+		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></p>
 		  
 		  <hr>
 		  <h1>Donate</h1>
