--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ description: "Shengbin Meng's Home Page, providing links to other information ab
             <h2>Contact</h2>
             <p>You may already know how to reach me. If not, here are some possible ways:</p>
             <ul>
-            <li>Email: <a href="mailto:meng@shengbin.me">meng@shengbin.me</a></li>
+            <li>Email: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></li>
             <li>QQ: 815237522</li>
             </ul>
         </td>
@@ -98,7 +98,7 @@ description: "Shengbin Meng's Home Page, providing links to other information ab
             <h2>联系我</h2>
             <p>如果访问了上面链接的内容，你应该已经能够联系到我了。这里再给出两种时效性更好的联系方式：</p>
             <ul>
-            <li>Email: <a href="mailto:meng@shengbin.me">meng@shengbin.me</a></li>
+            <li>Email: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></li>
             <li>QQ: 815237522</li>
             </ul>
         </td>
