--- a/apps/chisha/index.html
+++ b/apps/chisha/index.html
@@ -28,7 +28,7 @@ description: "Shengbin's App - ChiSha"
 		  <p><a href="http://pan.baidu.com/s/1o69LaX0">http://pan.baidu.com/s/1o69LaX0</a></p>
           
           <h2>联系开发者</h2>
-		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:meng@shengbin.me">meng@shengbin.me</a></p>
+		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:shengbinmeng@me.com">shengbinmeng@me.com</a></p>
 		  
 		  <hr>
 		  <h1>Donate</h1>
