--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: "Shengbin Meng - 孟胜彬"
 keywords: "Shengbin Meng, shengbinmeng, 孟胜彬"
-description: "Shengbin Meng's Home Page, providing links to other information about him. 孟胜彬的起始页，提供其在网络上各种信息的链接。"
+description: "Shengbin's Home Page, providing links to other information about him. 孟胜彬的起始页，提供其在网络上各种信息的链接。"
 ---
 
 <base target="_blank">
@@ -67,22 +67,22 @@ description: "Shengbin Meng's Home Page, providing links to other information ab
             <h2>Social Network</h2>
             <p>I spend only a little time on social networks. However, that doesn't stop me trying all kinds of them. 
             You can find me in the following places: </p>
-            <p><a href="http://weibo.com/msb91">Weibo</a> (login required)</p>
+            <p><a href="http://weibo.com/msb91">Weibo</a></p>
             <p><a href="http://www.renren.com/shengbinmeng">Renren</a> (login required)</p>
-            <p><a href="http://movie.douban.com/people/msb91/">Douban</a></p>
-            <p><a href="http://twitter.com/shengbinmeng">Twitter</a></p>
-            <p><a href="https://www.facebook.com/shengbinmeng">Facebook</a> (login required)</p>
-            <p><a href="https://plus.google.com/+ShengbinMeng">Google+</a></p>
+            <p><a href="https://movie.douban.com/people/msb91/">Douban</a></p>
+            <p><a href="https://twitter.com/shengbinmeng">Twitter</a></p>
+            <p><a href="https://www.facebook.com/shengbinmeng">Facebook</a></p>
+            <p><a href="https://plus.google.com/+shengbinmeng">Google+</a></p>
         </td>
         <td>
             <h2>社交网站</h2>
             <p>其实我不怎么使用社交网站。但我喜欢尝试和接受新的东西，也愿意分享。因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
-            <p><a href="http://weibo.com/msb91">梦圣@新浪微博</a>（需要登录）</p>
+            <p><a href="http://weibo.com/msb91">梦圣@微博</a></p>
             <p><a href="http://www.renren.com/shengbinmeng">孟胜彬@人人网</a>（需要登录）</p>
-            <p><a href="http://movie.douban.com/people/msb91/">msb91@豆瓣</a></p>
-            <p><a href="http://twitter.com/shengbinmeng">shengbinmeng@Twitter</a></p>
-            <p><a href="https://www.facebook.com/shengbinmeng">Shengbin Meng@Facebook</a>（需要登录）</p>
-            <p><a href="https://plus.google.com/+ShengbinMeng">Shengbin Meng@Google+</a></p>
+            <p><a href="https://movie.douban.com/people/msb91/">孟先生@豆瓣</a></p>
+            <p><a href="https://twitter.com/shengbinmeng">Shengbin Meng@Twitter</a></p>
+            <p><a href="https://www.facebook.com/shengbinmeng">Shengbin Meng@Facebook</a></p>
+            <p><a href="https://plus.google.com/+shengbinmeng">Shengbin Meng@Google+</a></p>
         </td>
 	</tr>
 	<tr>
